# qtermwidget

./: CMakeLists.txt  README.md
examples/pyqt/: filter.py  main.py  my_main.py  terminal_io_capture.py
lib/: CharacterWrapper.h  Pty.cpp  Pty.h  Session.cpp  Session.h  qtermwidget.cpp  qtermwidget.h
pyqt/: project.py  pyproject.toml
pyqt/sip/: qtermwidget.sip
