# https://www.riverbankcomputing.com/static/Docs/sip/index.html

[build-system]
requires = ["sip", "PyQt-builder"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "QTermWidget"
version = "1.4.0"
requires-dist = ["PyQt5"]
include-dirs = ["/home/charlie/Projects/qtermwidget/build/include", "/home/charlie/Projects/qtermwidget/lib"]